tests/snapshots/presenter__presenter_quit_confirm.snap
---
source: tests/presenter.rs
expression: out
---
"┌r─────────────────────────────────────┐┌main.rs───────────────────────────────────────────────────┐"
"│  ▾ src                               ││Showing first 5000 lines (truncated)                      │"
"│M     main.rs                         ││delta not found — showing plain diff                      │"
"│    ▾ inner                           ││fn main() {                                               │"
"│A       add┌Discard annotations?──────────────────────────────────────────────────────┐           │"
"│    README.│                                                                          │           │"
"│D   gone.tx│ 3 annotations will be lost:                                              │           │"
"│?   scratch│   README.md — Clarify the fallback.                                      │           │"
"│           │   src/app.rs:42 — Explain the ignored result.                            │           │"
"│           │   src/界[2J.rs:42-47 — Unicode 🙂 note with a very long tail that must … │           │" Hidden by multi-width symbols: [(21, " "), (46, " ")]
"│           │                                                                          │           │"
"│           └───────────────────y copy & quit · q quit · esc cancel────────────────────┘           │"
"│                                      ││                                                          │"
"│                                      ││                                                          │"
"│                                      ││                                                          │"
"└──────────────────────────────────────┘└annotations: 3──────────────────────────────────────? help┘"
