tests/snapshots/presenter__remote_notice_spotlight_only.snap
---
source: tests/presenter.rs
assertion_line: 1675
expression: out
---
"┌r─────────────────────────────────────┐┌main.rs───────────────────────────────────────────────────┐"
"│  ▾ src                               ││Showing first 5000 lines (truncated)                      │"
"│M     main.rs                         ││delta not found — showing plain diff                      │"
"│    ▾ inner                           ││fn main() {                                               │"
"│A       added.rs                      ││    println!("hello");                                    │"
"│    README.md                         ││}                                                         │"
"│D   gone.txt                          ││                                                          │"
"│?   scratch.log                       ││                                                          │"
"│                                      ││                                                          │"
"│                                      ││                                                          │"
"│                                      ││                                                          │"
"│                                      ││                                                          │"
"│                                      ││                                                          │"
"│                                      ││                                                          │"
"│                                      ││                                                          │"
"│                                      ││                                                          │"
"│                                      ││                                                          │"
"│                                      ││                                                          │"
"│                                      ││                                                          │"
"│                                      ││                                                          │"
"│                                      ││                                                          │"
"│                                      ││                                                          │"
"└──────────────────────────────────────┘└────────────────────────────────────────────────────? help┘"
"Spotlight: Project Meteor · ? details · u dismiss                                                   "
